Refactor to make TaxLot model into a Gain thats realized on sells and income distributions
